--- a/Develop/server/package.json
+++ b/Develop/server/package.json
@@ -1,24 +1,24 @@
 {
-    "name": "server",
-    "version": "1.0.0",
-    "description": "",
-    "main": "server.js",
-    "scripts": {
-      "start": "node server.js",
-      "watch": "nodemon server.js"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-      "bcrypt": "^5.0.0",
-      "express": "^4.17.1",
-      "graphql": "^15.5.0",
-      "jsonwebtoken": "^8.5.1",
-      "mongoose": "^5.9.10"
-    },
-    "devDependencies": {
-      "nodemon": "^2.0.3"
-    }
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "seed": "node seeds/seed.js",
+    "watch": "nodemon server.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "apollo-server-express": "^3.6.2",
+    "bcrypt": "^5.0.0",
+    "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.1.8"
+   
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
-  
+}
