--- a/Develop/client/package.json
+++ b/Develop/client/package.json
@@ -10,6 +10,8 @@
       "bootstrap": "^4.4.1",
       "jwt-decode": "^2.2.0",
       "react": "^16.13.1",
+      "graphql": "^15.3.0",
+    "graphql-tag": "^2.11.0",
       "react-bootstrap": "^1.0.1",
       "react-dom": "^16.13.1",
       "react-router-dom": "^5.1.2",
