--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "proxy": "http://localhost:3001",
+    "engines": {
+      "node": "16.18.1"
+    },
     "dependencies": {
       "@testing-library/jest-dom": "^4.2.4",
       "@testing-library/react": "^9.3.2",
