--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb+srv://Tr1cycl3:<Tr1cycl3>@mern-stack.a5xqg7o.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://Tr1cycl3:Tr1cycl3@mern-stack.a5xqg7o.mongodb.net/googlebooks?retryWrites=true&w=majority
 NODE_ENV=development
